start using zola (https://www.getzola.org/)

--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "url": "https://github.com/jrwiegand/website"
   },
   "scripts": {
+    "build": "postcss styles/styles.css --output static/styles.min.css --no-map",
+    "watch": "postcss styles/styles.css --output static/styles.min.css --watch",
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "autoprefixer": "10.2.6",
+    "cssnano": "5.0.5",
+    "postcss-cli": "8.3.1",
     "prettier": "2.3.0",
     "tailwindcss": "2.1.2"
   },
