--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,10 @@
 # https://www.getzola.org/documentation/getting-started/configuration/
 
 base_url = "https://www.joshwiegand.com"
-compile_sass = false
 build_search_index = false
-minify_html = false
+compile_sass = false
+minify_html = true
+output_dir = "dist"
 
 [extra]
 name = "Josh Wiegand"
