--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# dependencies installed by npm
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+# build artifacts
+/dist
+/static/*.css
 
-# next.js
-/.next/
-/out/
+# secrets
+.env
 
-# production
-/build
-
-# misc
+# macOS related files
 .DS_Store
+.AppleDouble
+.LSOverride
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# vercel
-.vercel
-static/styles.min.css
-static/styles.css
