--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.5.0",
+  "version": "0.5.1",
   "name": "website",
   "description": "A project scaffold using Zola and TailwindCSS.",
   "author": "Josh Wiegand",
@@ -9,8 +9,8 @@
     "url": "https://github.com/jrwiegand/website"
   },
   "scripts": {
-    "build": "postcss styles/styles.css --output static/styles.min.css --no-map",
-    "watch": "postcss styles/styles.css --output static/styles.min.css --no-map --watch",
+    "build": "postcss styles/styles.css --output static/styles.css --no-map",
+    "watch": "postcss styles/styles.css --output static/styles.css --no-map --watch",
     "prettier": "prettier --write ."
   },
   "dependencies": {
@@ -18,10 +18,10 @@
     "cssnano": "5.0.5",
     "postcss-cli": "8.3.1",
     "prettier": "2.3.0",
-    "tailwindcss": "2.1.2"
+    "tailwindcss": "2.1.3"
   },
   "volta": {
     "node": "16.2.0",
-    "npm": "7.15.0"
+    "npm": "7.15.1"
   }
 }
